
    Some change notes are brief; consult the documentation for further
    information/clarification.  It is possible that some changes to
    MHonArc are not documented here, but every effort is made to list
    all visible changes.

YYYY/MM/DD
============================================================================
2005/07/23	(2.6.14)

* Bug Fixes:

    Bug ID  Summary
    ------  ------------------------------------------------------------
     2641   Additional Callbacks
     3225   CHARSETCONVERTERS not reset across multi-archive process
    11759   email address exposed in subject line
    ------  ------------------------------------------------------------
    <https://savannah.nongnu.org/bugs/?group=mhonarc>

* New resources:

    PRINTXCOMMENTS	Print <!--X-...--> comments in generated pages.

* Added "Performance Tips" document: Provides configuration tips
  to improve the execution performance of mhonarc.

============================================================================
2005/07/06	(2.6.13)

* Bug Fixes:

    Bug ID  Summary
    ------  ------------------------------------------------------------
    12314   linebreak not utf-8 aware
    ------  ------------------------------------------------------------
    <https://savannah.nongnu.org/bugs/?group=mhonarc>

* mha-preview example script changes:

  - If preview data not available for message, the empty string
    is used.  Before, undef was returned to mhonarc, causing
    warning messages and $X-MSG-PREVIEW$ to show up on index pages.

  - Beefed up preview text extraction to skip past quoted text.

  Someday, mha-preview functionality will be intrinisic to mhonarc.

============================================================================
2005/06/08	(2.6.12)

* Bug Fixes:

    Bug ID  Summary
    ------  ------------------------------------------------------------
    11761   spammode causes broken mailto: links in message body